2011-04-08  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Adjust enhanced text placement, removing some kludges
	that appear not to be necessary with the current generation of browsers.

2011-04-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.h term/svg.trm demo/html/webify_svg.pl demo/html/Makefile.svg
	demo/html/Makefile.svg:  Add bitmap image handling to the svg terminal
	using the same mechanism of external png files used by the canvas and 
	tikz terminals.

	* term/svg.trm(SVG_init): Konqueror (KDE 4.5) crashes if the xlink to
	gnuplot_svg.js fails to load.  Work around this by adding a test for the
	presence of gnuplot_svg before initializing.

2011-04-06  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/win.trm, src/win/wgnuplib.h, src/win/wgraph.c: Use UINTs
	instead of DWORDs in struct GWOP.
	
	* src/win/wgraph.c, src/win/wgnuplib.h: Move static flag for 
	unsupported encodings to struct LPGW. This ensures that errors
	are reported only once.

2011-04-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c src/graphics.c src/term_api.h:  Add layering flags
	for BEGIN/END KEYSAMPLE.
	
	* term/js/gnuplot_svg.js term/svg.trm: Elementary mousing support for
	the svg terminal based on Patches #2477391 #2478169 (yeah, those are
	from 2 years ago).  Toggle plot on/off in response to mouse click on
	the corresponding key entry.

	* demo/html/Makefile.svg demo/html/index.svg demo/html/webify_svg.pl:
	Revise the svg demo set to use mousing.

	* src/graphics.c (do_plot) src/term_api.h (TERM_LAYER_RESET_PLOTNO)
	term/svg.trm term/canvas.trm: The "set key opaque" option was causing
	mismatched begin/end plot pairs in output from the svg and canvas
	terminals (begin/begin/end).  Revise this so that the plot and the key
	sample numbering is out of sync.

2011-04-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c (ifilled_quadrangle): See note in the code.  For some