@@ -3,6 +3,9 @@
 	* term/svg.trm: Adjust enhanced text placement, removing some kludges
 	that appear not to be necessary with the current generation of browsers.
 
+	* term/svg.trm term/js/gnuplot_svg.js:  Implement mouse tracking
+	framework. 
+
 2011-04-07  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/term.h term/svg.trm demo/html/webify_svg.pl demo/html/Makefile.svg
